# r-saturator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
installer/windows/: R-Saturator.iss
scripts/: package_macos.sh
src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UserSettings.cpp  UserSettings.h
src/dsp/: Saturator.cpp  Saturator.h
